Fix overflow for link hover and remove duplicated rules

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,11 +36,11 @@ h1, h2 {
     margin: 20px 0 30px 30px;
 }
 
+/* Style navigation bar */
+
 #navbar {
-    width: 100%;
     clear: left;
-    font-size: 110%;
-    background-color: #454720;
+    font-size: 120%;
 }
 
 #navbar li {
@@ -54,6 +54,7 @@ h1, h2 {
     width: 100%;
     text-decoration: none;
     color: #e2ecba;
+    background-color: #454720;
     padding: 10px;
 }
 
